# NIPS_papers

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  auth.toml  config.toml  pyproject.toml  tox.ini
app/: basic_streamlit_app.py
app/pages/: page1.py  page2.py
notebooks/: 1.NIPS_Paper.ipynb  NIPS_Paper_bonus.py  README.md  graph_authors_0.html  graph_authors_1.html  graph_authors_outlier_0.html  graph_largest_community.html  graph_second_largest_community.html
reports/html/: graph_authors.html  graph_authors_0.html
src/: const.py
src/dataloader/: const.py  csv_loader.py  data_loader.py  sqlite_loader.py
src/utils/: dataviz.py  stringology.py
