[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[ratpcc]
project_name = "NIPS_paper"

[tool.poetry]
name = "NIPS_paper"
version = "0.1.0"
description = "Description à remplir"
authors = ["Lydia Vijayarajah <lydia.vijayarajah@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

# POINTS D'ENTREE DU PACKAGE
[tool.poetry.scripts]
# NB : Fonctionne uniquement en ajoutant le template dbx au projet
main_entrypoint = "src.cli:start_run_my_use_case_on_dbx"

# DEPENDANCES
[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.34.0"
toml = "^0.10.2"
networkx = "^3.3"
matplotlib = "^3.8.4"
spicy = "^0.16.0"
pyvis = "^0.3.2"
python-louvain = "^0.16"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
mypy = "^1.8.0"
pre-commit = "^2.20.0"
pytest = "^8.0.1"
tox = "^4.15.0"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.4"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = ["notebooks/*", "*/tests/*", "tests/*"]

lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "C90", #Mccabe
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "D",   # flake8-docstrings
    "PL",  # PyLint
]

lint.ignore = [
    "D100", # Missing docstring in module / package
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "D212", # Multi-line docstring summary should start at the first line
    "E501", # Line too long - Should be Temporarily
]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

line-length = 99

[tool.ruff.lint.pylint]
max-locals = 15
max-args = 7
max-returns = 6
max-branches = 15
max-statements = 60
max-public-methods = 20

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"            # Like Black, use double quotes for strings.
indent-style = "space"            # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto"              # Like Black, automatically detect the appropriate line ending.
